Fix: Adjusting the margin and gapping for mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,9 @@ body, html{
 	flex-direction: column;
 }
 .inner-container {
-	margin-top: 50px;
+	margin-top: 15px;
+	height: 100%;
+	display: flex;
 	height: 100%;
 }
 
@@ -61,6 +63,10 @@ body, html{
 	line-height: 1.5;
 }
 @media (min-width: 870px) {
+	.inner-container {
+		margin-top: 50px;
+		gap: 1em;
+	}
 	.intervals,
 	.scales,
 	.chords {
