--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5,7 +5,7 @@
 	align-items: center;
 	justify-content: space-around;
 	flex-direction: column;
-	gap: 0.72em;
+	gap: 0.33em;
 	max-width: 1024px;
 	margin: 0 auto;
 	padding-top: 3em;
@@ -14,7 +14,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 3em;
+	gap: 1.5em;
 }
 .intro-section h1 {
 	font-family: "Tilt Neon", sans-serif;
